# optimization-methods

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt
projects/lab_1/src/: main.cpp
projects/lab_2/src/: main.cpp
projects/simplex_method/include/: matrix.hpp  optimization_result.h  optimization_result.hpp  simplex_method.h  simplex_method.hpp  simplex_method_definitions.h  simplex_method_definitions.hpp  simplex_method_matrix.hpp  simplex_task_normalizer.hpp
projects/simplex_method/src/: simplex_method.cpp
